[package]
name = "aeko-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
aeko-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-sdk = { workspace = true }
aeko-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

