[package]
name = "aeko-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
aeko-account-decoder = { workspace = true }
aeko-accounts-db = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-client = { workspace = true }
aeko-faucet = { workspace = true }
aeko-gossip = { workspace = true }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-net-utils = { workspace = true }
aeko-rpc-client = { workspace = true, features = ["default"] }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-transaction-status = { workspace = true }
aeko-version = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
aeko-core = { workspace = true }
aeko-local-cluster = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }
aeko-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

