[package]
name = "aeko-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
aeko-client = { workspace = true }
aeko-core = { workspace = true }
aeko-gossip = { workspace = true }
aeko-ledger = { workspace = true }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-perf = { workspace = true }
aeko-poh = { workspace = true, features = ["dev-context-only-utils"] }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-tpu-client = { workspace = true }
aeko-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

