[package]
name = "aeko-banks-client"
description = "AEKO banks client"
documentation = "https://docs.rs/aeko-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
aeko-banks-interface = { workspace = true }
aeko-program = { workspace = true }
aeko-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
aeko-banks-server = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "aeko_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
