[package]
name = "aeko-banks-server"
description = "AEKO banks server"
documentation = "https://docs.rs/aeko-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
aeko-banks-interface = { workspace = true }
aeko-client = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-send-transaction-service = { workspace = true }
aeko-svm = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "aeko_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
