[package]
name = "aeko-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-client = { workspace = true }
aeko-connection-cache = { workspace = true }
aeko-core = { workspace = true }
aeko-faucet = { workspace = true }
aeko-genesis = { workspace = true }
aeko-gossip = { workspace = true }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-net-utils = { workspace = true }
aeko-rpc = { workspace = true }
aeko-rpc-client = { workspace = true }
aeko-rpc-client-api = { workspace = true }
aeko-rpc-client-nonce-utils = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-tpu-client = { workspace = true }
aeko-transaction-status = { workspace = true }
aeko-version = { workspace = true }
spl-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
aeko-local-cluster = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }
aeko-test-validator = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

