[package]
name = "aeko-cargo-registry"
description = "Solana cargo registry"
documentation = "https://docs.rs/aeko-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-cli-output = { workspace = true }
aeko-logger = { workspace = true }
aeko-remote-wallet = { workspace = true, features = ["default"] }
aeko-rpc-client = { workspace = true, features = ["default"] }
aeko-rpc-client-api = { workspace = true }
aeko-sdk = { workspace = true }
aeko-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

