[package]
name = "aeko-cli"
description = "AEKO Chain, Rebuilt for SocialFi Scale"
documentation = "https://docs.rs/aeko-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
aeko-account-decoder = { workspace = true }
aeko-bpf-loader-program = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-cli-output = { workspace = true }
aeko-client = { workspace = true }
aeko-config-program = { workspace = true }
aeko-faucet = { workspace = true }
aeko-loader-v4-program = { workspace = true }
aeko-logger = { workspace = true }
aeko-program-runtime = { workspace = true }
aeko-pubsub-client = { workspace = true }
aeko-remote-wallet = { workspace = true, features = ["default"] }
aeko-rpc-client = { workspace = true, features = ["default"] }
aeko-rpc-client-api = { workspace = true }
aeko-rpc-client-nonce-utils = { workspace = true }
aeko-sdk = { workspace = true }
aeko-tpu-client = { workspace = true, features = ["default"] }
aeko-transaction-status = { workspace = true }
aeko-version = { workspace = true }
aeko-vote-program = { workspace = true }
solana_rbpf = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
aeko-streamer = { workspace = true }
aeko-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }

[[bin]]
name = "aeko"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

