[package]
name = "aeko-client-test"
description = "Solana RPC Test"
documentation = "https://docs.rs/aeko-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
aeko-client = { workspace = true }
aeko-ledger = { workspace = true }
aeko-measure = { workspace = true }
aeko-merkle-tree = { workspace = true }
aeko-metrics = { workspace = true }
aeko-perf = { workspace = true }
aeko-pubsub-client = { workspace = true }
aeko-rayon-threadlimit = { workspace = true }
aeko-rpc = { workspace = true }
aeko-rpc-client = { workspace = true }
aeko-rpc-client-api = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-test-validator = { workspace = true }
aeko-transaction-status = { workspace = true }
aeko-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
aeko-logger = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

