[package]
name = "aeko-client"
description = "AEKO Client"
documentation = "https://docs.rs/aeko-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
aeko-connection-cache = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-pubsub-client = { workspace = true }
aeko-quic-client = { workspace = true }
aeko-rpc-client = { workspace = true, features = ["default"] }
aeko-rpc-client-api = { workspace = true }
aeko-rpc-client-nonce-utils = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-thin-client = { workspace = true }
aeko-tpu-client = { workspace = true, features = ["default"] }
aeko-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
