[package]
name = "aeko-connection-cache"
description = "Solana Connection Cache"
documentation = "https://docs.rs/aeko-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand_chacha = { workspace = true }
aeko-logger = { workspace = true }
aeko-net-utils = { workspace = true }

