[package]
name = "aeko-core"
description = "AEKO Chain, Rebuilt for SocialFi Scale"
documentation = "https://docs.rs/aeko-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "aeko-chain/aeko", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
aeko-accounts-db = { workspace = true }
aeko-bloom = { workspace = true }
aeko-client = { workspace = true }
aeko-cost-model = { workspace = true }
aeko-entry = { workspace = true }
aeko-frozen-abi = { workspace = true }
aeko-frozen-abi-macro = { workspace = true }
aeko-geyser-plugin-manager = { workspace = true }
aeko-gossip = { workspace = true }
aeko-ledger = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-net-utils = { workspace = true }
aeko-perf = { workspace = true }
aeko-poh = { workspace = true }
aeko-program-runtime = { workspace = true }
aeko-quic-client = { workspace = true }
aeko-rayon-threadlimit = { workspace = true }
aeko-rpc = { workspace = true }
aeko-rpc-client-api = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-send-transaction-service = { workspace = true }
aeko-streamer = { workspace = true }
aeko-svm = { workspace = true }
aeko-tpu-client = { workspace = true }
aeko-transaction-status = { workspace = true }
aeko-turbine = { workspace = true }
aeko-unified-scheduler-pool = { workspace = true }
aeko-version = { workspace = true }
aeko-vote = { workspace = true }
aeko-vote-program = { workspace = true }
aeko-wen-restart = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fs_extra = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
aeko-core = { path = ".", features = ["dev-context-only-utils"] }
aeko-logger = { workspace = true }
aeko-poh = { workspace = true, features = ["dev-context-only-utils"] }
aeko-program-runtime = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }
aeko-sdk = { workspace = true, features = ["dev-context-only-utils"] }
aeko-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
