[package]
name = "aeko-cost-model"
description = "Solana cost model"
documentation = "https://docs.rs/aeko-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
aeko-address-lookup-table-program = { workspace = true }
aeko-bpf-loader-program = { workspace = true }
aeko-compute-budget-program = { workspace = true }
aeko-config-program = { workspace = true }
aeko-frozen-abi = { workspace = true }
aeko-frozen-abi-macro = { workspace = true }
aeko-loader-v4-program = { workspace = true }
aeko-metrics = { workspace = true }
aeko-program-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-stake-program = { workspace = true }
aeko-system-program = { workspace = true }
aeko-vote-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "aeko_cost_model"

[dev-dependencies]
aeko-logger = { workspace = true }
aeko-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

