[package]
name = "aeko-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
aeko-bench-tps = { workspace = true }
aeko-client = { workspace = true }
aeko-core = { workspace = true }
aeko-faucet = { workspace = true }
aeko-gossip = { workspace = true }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-net-utils = { workspace = true }
aeko-perf = { workspace = true }
aeko-quic-client = { workspace = true }
aeko-rpc = { workspace = true }
aeko-rpc-client = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-tpu-client = { workspace = true }
aeko-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
aeko-local-cluster = { workspace = true }
