[package]
name = "aeko-entry"
description = "AEKO Entry"
documentation = "https://docs.rs/aeko-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
aeko-measure = { workspace = true }
aeko-merkle-tree = { workspace = true }
aeko-metrics = { workspace = true }
aeko-perf = { workspace = true }
aeko-rayon-threadlimit = { workspace = true }
aeko-sdk = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
aeko-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "aeko_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

