[package]
name = "aeko-faucet"
description = "AEKO Faucet"
documentation = "https://docs.rs/aeko-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-logger = { workspace = true }
aeko-metrics = { workspace = true }
aeko-sdk = { workspace = true }
aeko-version = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "aeko_faucet"

[[bin]]
name = "aeko-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
