[package]
name = "aeko-genesis-utils"
description = "AEKO Genesis Utils"
documentation = "https://docs.rs/aeko-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
aeko-accounts-db = { workspace = true }
aeko-download-utils = { workspace = true }
aeko-rpc-client = { workspace = true }
aeko-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "aeko_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
