[package]
name = "aeko-genesis"
description = "AEKO Chain, Rebuilt for SocialFi Scale"
documentation = "https://docs.rs/aeko-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
aeko-accounts-db = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-entry = { workspace = true }
aeko-ledger = { workspace = true }
aeko-logger = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-stake-program = { workspace = true }
aeko-version = { workspace = true }
aeko-vote-program = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[[bin]]
name = "aeko-genesis"
path = "src/main.rs"

[lib]
name = "aeko_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

