[package]
name = "aeko-geyser-plugin-interface"
description = "The Solana Geyser plugin interface."
documentation = "https://docs.rs/aeko-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
aeko-sdk = { workspace = true }
aeko-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

