[package]
name = "aeko-geyser-plugin-manager"
description = "The Solana Geyser plugin manager."
documentation = "https://docs.rs/aeko-geyser-plugin-manager"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
json5 = { workspace = true }
jsonrpc-core = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
aeko-accounts-db = { workspace = true }
aeko-entry = { workspace = true }
aeko-geyser-plugin-interface = { workspace = true }
aeko-ledger = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-rpc = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

