[package]
name = "aeko-gossip"
description = "AEKO Chain, Rebuilt for SocialFi Scale"
documentation = "https://docs.rs/aeko-gossip"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
bv = { workspace = true, features = ["serde"] }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
aeko-bloom = { workspace = true }
aeko-clap-utils = { workspace = true }
aeko-client = { workspace = true }
aeko-connection-cache = { workspace = true }
aeko-entry = { workspace = true }
aeko-frozen-abi = { workspace = true }
aeko-frozen-abi-macro = { workspace = true }
aeko-ledger = { workspace = true }
aeko-logger = { workspace = true }
aeko-measure = { workspace = true }
aeko-metrics = { workspace = true }
aeko-net-utils = { workspace = true }
aeko-perf = { workspace = true }
aeko-rayon-threadlimit = { workspace = true }
aeko-runtime = { workspace = true }
aeko-sdk = { workspace = true }
aeko-streamer = { workspace = true }
aeko-tpu-client = { workspace = true }
aeko-version = { workspace = true }
aeko-vote = { workspace = true }
aeko-vote-program = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
num_cpus = { workspace = true }
serial_test = { workspace = true }
aeko-runtime = { workspace = true, features = ["dev-context-only-utils"] }
test-case = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "aeko-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
