[package]
name = "aeko-install"
description = "The solana cluster software installer"
documentation = "https://docs.rs/aeko-install"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
atty = { workspace = true }
bincode = { workspace = true }
bzip2 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = { workspace = true }
console = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
dirs-next = { workspace = true }
indicatif = { workspace = true }
lazy_static = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
scopeguard = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_yaml_08 = { package = "serde_yaml", version = "0.8.26" }
aeko-clap-utils = { workspace = true }
aeko-config-program = { workspace = true }
aeko-logger = { workspace = true }
aeko-rpc-client = { workspace = true }
aeko-sdk = { workspace = true }
aeko-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }

[target."cfg(windows)".dependencies]
winapi = { workspace = true, features = ["minwindef", "winuser"] }
winreg = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

