[package]
name = "aeko-keygen"
description = "AEKO key generation utility"
documentation = "https://docs.rs/aeko-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = { workspace = true }
num_cpus = { workspace = true }
aeko-clap-v3-utils = { workspace = true }
aeko-cli-config = { workspace = true }
aeko-remote-wallet = { workspace = true, features = ["default"] }
aeko-sdk = { workspace = true }
aeko-version = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "aeko-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
